# Initilize

./: CMakeLists.txt  euroc_config.yaml  package.xml
src/: Initialize.cpp  Initialize.h  estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  imu_factor.h  initial_alignment.h  initial_ex_rotation.h  integration_base.h  main.cpp  marginalization_factor.h  parameters.cpp  parameters.h  plane_constraint.cpp  plane_constraint.h  projection_factor.cpp  projection_factor.h
